--- a/frontend/airline-website/src/styles/about.css
+++ b/frontend/airline-website/src/styles/about.css
@@ -1,5 +1,5 @@
 .about__background {
-  background-color: #e8f5e9; /* Màu xanh nhạt */
+  background-color: #c6e8f6; /* Màu xanh nhạt */
   padding: 50px 0;
 }
 
