--- a/frontend/airline-website/src/components/Header/header.css
+++ b/frontend/airline-website/src/components/Header/header.css
@@ -2,7 +2,7 @@
 :root {
   --primary-color: #2c3e50; /* Màu xanh than */
   --primary-color-dark: #1a242f;
-  --secondary-color: #e67e22; /* Màu cam */
+  --secondary-color: #4597e0; /* Màu cam */
   --text-dark: #0f172a;
   --text-light: #64748b;
   --extra-light: #f1f5f9;
